--- a/css/index.css
+++ b/css/index.css
@@ -141,6 +141,8 @@ float: left;
 /* 搜索栏 */
 .search{
     width: 100%;
+    height: 80px;
+    padding-top: 20px;
 }
 .search-book{
     position: relative;
@@ -159,7 +161,8 @@ float: left;
     border: 1px solid #ccc;
     line-height: 21px;
 }
-.search-book-xiala{
+
+.search-book-xiala {
     display: none;
     position: absolute;
     width: 176px;
@@ -167,8 +170,274 @@ float: left;
     border: 1px solid #ccc;
     top: 19px;
     left: 0;
+    background-color: #ffffff;
+    z-index: 100;
 }
-.search-book-xiala p{
+
+.search-book-xiala p {
     line-height: 2;
     padding-left: 10px;
+}
+
+.search-input {
+    position: relative;
+    display: inline-block;
+    width: 540px;
+    height: 36px;
+    border: 2px solid #a28347;
+    margin-left: 110px;
+}
+
+.search-input input {
+    width: 450px;
+    height: 34px;
+    border: none;
+    padding: 0 10px;
+}
+
+.search-input button {
+    position: absolute;
+    display: inline-block;
+    width: 70px;
+    height: 36px;
+    background-color: #a28347;
+    border: none;
+    color: #ffffff;
+    top: 0;
+    right: 0;
+    font-size: 18px;
+}
+
+.shopping-cart {
+    float: right;
+    width: 138px;
+    height: 34px;
+    background-color: #f9f9f9;
+    border: 1px solid #dfdfdf;
+    margin-top: 22px;
+    text-align: center;
+    line-height: 34px;
+}
+.guanjianzi{
+    position: absolute;
+    bottom: -1px;
+    right: 310px;
+}
+.guanjianzi a{
+color: #999999;
+margin-right: 10px;
+}
+.guanjianzi a:hover{
+    color: red;
+}
+/* 图书分类 */
+main{
+    width: 100%;
+    height: 2000px;
+    background-color: #f5f5f5;
+}
+.fenlei{
+    width: 100%;
+    /* height: 2000px; */
+    
+    margin-top: 10px;
+}
+.fenlei-left{
+    width: 240px;
+   float: left;
+   background-color: #fff;
+   border: 1px solid #ccc;
+}
+.fenlei-left h3{
+width: 100%;
+height: 40px;
+line-height: 40px;
+background-color: #a28374;
+color: #fff;
+padding-left: 10px;
+box-sizing: border-box;
+}
+.fenlei-left ul{
+    background-color: #fff;
+}
+.fenlei-left ul li{
+    width: 100%;
+    padding-left: 10px;
+    box-sizing: border-box;
+    padding-bottom: 10px;
+}
+.fenlei-list li h2{
+    font-size: 16px;
+    margin-bottom: 14px;
+    padding-top: 15px;
+    color: #876c5f;
+}
+.fenlei-list li a{
+    margin-right: 12px;
+    line-height: 1.5;
+    color: #62605b;
+}
+/* 下拉 */
+.fenlei-list li {
+    position: relative;
+}
+.fenlei-list li div{
+    position: absolute;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    top: -50%;
+    left: 240px;
+    display: none;
+    z-index: 100;
+    width: 630px;
+    padding-left: 30px;
+    box-sizing: border-box;
+}
+.fenlei-list li p{
+    line-height: 2;
+    font-weight: 700;
+    margin: 15px 0;
+}
+.fenlei-list li p a{
+    display: inline-block;
+    border-left: 1px solid #ccc;
+    padding-left: 10px;
+    text-align: center;
+}
+/* 轮播图部分 */
+.fenlei-center{
+width: 734px;
+margin: 0;
+float: left;
+margin: 0 10px;
+overflow: hidden;
+}
+.fenlei-center img{
+    width: 100%;
+}
+.fenlei-center-tittle{
+    width: 100%;
+    font-size: 12px;
+    padding: 16px 0;
+    border: 1px solid #ccc;
+}
+.fenlei-center-tittle a{
+    padding: 0 18px;
+    border-right: 1px solid #ccc;
+}
+.fenlei-center-lunbo{
+    position: relative;
+}
+.slider{
+    /* width: calc(734 * 5)px; */
+   
+}
+.slider li{
+    width: 734px;
+    float: left;
+}
+.odiv_nav{
+    position: absolute;
+    bottom: -330px;
+    left: 50%;
+    margin-left: -100px;
+}
+.span_list{
+    width: 10px;
+    height: 10px;
+    border: 3px solid white;
+    border-radius:50%;
+    float: left;
+    margin-left: 20px;
+    cursor: pointer;
+}
+.left_click{
+    position: absolute;
+    width: 26px;
+    height: 42px;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    line-height: 42px;
+    cursor: pointer;
+    z-index: 1000;
+    top: 150px;
+    background-color: rgba(0,0, 0, 0.5);
+}
+.right_click{
+    position: absolute;
+    right: 0px;
+    width: 26px;
+    height: 42px;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    line-height: 42px;
+    cursor: pointer;
+    z-index: 1000;
+    top: 150px;
+    background-color: rgba(0,0, 0, 0.5);
+}
+.fenlei-right{
+width: 183px;
+float: right;
+}
+.guanzhupingdao>a{
+    display: inline-block;
+    width: 183px;
+    height: 40px;
+    background-color: #fff;
+    color: #666666;
+    text-align: center;
+    line-height: 40px;
+}
+.guanzhupingdao-content{
+    position: relative;
+    width: 183px;
+    height: 258px;
+    background-color: #a28374;
+    margin-top: 35px;
+    border: 1px solid #a28374;
+}
+.guanzhupingdao-content>img{
+    position: absolute;
+    width: 120px;
+    height: 120px;
+    top: -30px;
+    left: 31px
+}
+.guanzhupingdao-content p{
+    margin-top: 120px;
+    text-align: center;
+    color: #fff;
+    margin-bottom: 20px;
+}
+.guanzhupingdao-content a img{
+    width: 15px;
+    height: 15px;
+    vertical-align: middle;
+    margin-right: 5px;
+}
+.guanzhupingdao-content a{
+    float: left;
+    width: 70px;
+    margin: 10px;
+    color: #fff;
+}
+.fenlei-center-lunbo-bottom{
+    width: 100%;
+    height: 100px;
+}
+.fenlei-center-lunbo-bottom li{
+    float: left;
+    width: 23%;
+    margin-left: 14px;
+}
+.fenlei-center-lunbo-bottom li img{
+    width: 100%;
+}
+.kuaibao{
+    width: 100%;
+    height: 146px;
+    background-color: #fff;
 }
