--- a/css/index.css
+++ b/css/index.css
@@ -268,8 +268,8 @@ box-sizing: border-box;
 }
 .fenlei-list li h2{
     font-size: 16px;
-    margin-bottom: 14px;
-    padding-top: 15px;
+    margin-bottom: 10px;
+    padding-top: 10px;
     color: #876c5f;
 }
 .fenlei-list li a{
@@ -440,4 +440,144 @@ float: right;
     width: 100%;
     height: 146px;
     background-color: #fff;
+}
+/* 轮播图部分tab切换 */
+.aa-tuijian{
+    margin-left: 10px;
+}
+.aa-tuijian-jingxuan{
+    width: 928px;
+    height: 50px;
+    float: left;
+    margin-left: 10px;
+}
+.aa-tuijian-jingxuan span{
+    float: left;
+    width: 10%;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    cursor:pointer;
+    /* background-color: antiquewhite; */
+}
+.aa-tuijian-jingxuan h3{
+    width: 932px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    font-size: 25px;
+}
+.aa-tuijian-jingxuan .active{
+    background-color: #a28374;
+    color: #fff;
+}
+.jingxuan-content li{
+    float: left;
+}
+.jingxuan-content{
+    width: 932px;
+    float: left;
+    margin-top:50px ;
+}
+.jingxuan-content>li{
+    width: 100%;
+    display: none;
+}
+.jingxuan-content>li:first-child{
+    display: block;
+}
+.jingxuan-content-list{
+    width: 100%;
+}
+.jingxuan-content-list li{
+    width: 19%;
+    height: 265px;
+    background-color: #fff;
+    margin-left: 7px;
+}
+.jingxuan-content-list li img{
+    margin-left: 20px;
+    margin-top: 20px;
+    width: 140px;
+}
+.jingxuan-content-list li p{
+    line-height: 2.5;
+    text-align: center;
+    font-size: 14px;
+}
+.jingxuan-content-list li b{
+    display: block;
+    line-height: 2.5;
+    text-align: center;
+    font-size: 14px;
+    color: red;
+}
+/* 新书 */
+.aa-tuijian-xinshu{
+    width: 928px;
+    height: 65px;
+    float: left;
+    margin-left: 10px;
+}
+.aa-tuijian-xinshu span{
+    float: left;
+    width: 10%;
+    height: 65px;
+    line-height: 65px;
+    text-align: center;
+    cursor:pointer;
+    font-size: 14px;
+    /* background-color: antiquewhite; */
+}
+.aa-tuijian-xinshu h3{
+    width: 932px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    font-size: 25px;
+}
+.aa-tuijian-xinshu .active{
+    background-color: #a28374;
+    color: #fff;
+}
+.xinshu-content li{
+    float: left;
+}
+.xinshu-content{
+    width: 932px;
+    float: left;
+    margin-top:50px ;
+}
+.xinshu-content>li{
+    width: 100%;
+    display: none;
+}
+.xinshu-content>li:first-child{
+    display: block;
+}
+.xinshu-content-list{
+    width: 100%;
+}
+.xinshu-content-list li{
+    width: 19%;
+    height: 300px;
+    background-color: #fff;
+    margin-left: 7px;
+}
+.xinshu-content-list li img{
+    margin-left: 20px;
+    margin-top: 20px;
+    width: 140px;
+}
+.xinshu-content-list li p{
+    line-height: 3;
+    text-align: center;
+    font-size: 14px;
+}
+.xinshu-content-list li b{
+    display: block;
+    line-height: 3;
+    text-align: center;
+    font-size: 14px;
+    color: red;
 }
