--- a/css/index.css
+++ b/css/index.css
@@ -233,7 +233,7 @@ margin-right: 10px;
 /* 图书分类 */
 main{
     width: 100%;
-    height: 2000px;
+    height: 1278px;
     background-color: #f5f5f5;
 }
 .fenlei{
@@ -580,4 +580,65 @@ float: right;
     text-align: center;
     font-size: 14px;
     color: red;
+}
+/* 手风琴 */
+.shoufengqin{
+    width: 100%;
+    height: 400px;
+    background-color: #f5f5f5;
+}
+.box{
+	width: 100%;
+	margin: 10px auto;
+    padding: 15px;
+    margin-top: 20px;
+}
+.box ul li{
+	width: 194px;
+	height: 300px;
+	box-shadow: 3px 2px 30px rgba(0,0,0,.1);
+	float: left;
+	text-align: center;
+	position: relative;
+    transition: all .6s ease-out;
+    background-color: #fff;
+}
+.box ul li h3{
+	padding-top: 30px;
+	color: #333;
+	font-size: 18px;
+}
+.box ul li p{
+	margin-top: 7px;
+	color: #666;
+	font-size: 14px;
+}
+.box ul li img{
+	width: 150px;
+	height: 150px;
+	position: absolute;
+	right: 26px;
+	bottom: 40px;
+	transition: all .6s ease-out;
+}
+.box ul .on{
+	width: 402px;
+	height: 300px;
+	background-color: rgb(236, 230, 227);
+	text-align: left;
+}
+.box ul .on h3{
+	padding-left: 20px;
+	color: rgb(154, 6, 22);
+}
+.box ul .on p{
+	margin-left: 20px;
+	color: rgb(154, 6, 22);
+}
+.box ul .on img{
+	width: 270px;
+	height: 270px;
+	position: absolute;
+	right: 0px;
+	bottom: 0px;
 }
