--- a/css/index.css
+++ b/css/index.css
@@ -584,7 +584,7 @@ float: right;
 /* 手风琴 */
 .shoufengqin{
     width: 100%;
-    height: 400px;
+    height: 316px;
     background-color: #f5f5f5;
 }
 .box{
@@ -641,4 +641,15 @@ float: right;
 	position: absolute;
 	right: 0px;
 	bottom: 0px;
+}
+
+
+.bankuai-1{
+    width: 100%;
+    height: 587px;
+    background-color: #f5f5f5;
+}
+.bankuai-1 img{
+    width: 100%;
+    cursor: pointer;
 }
