--- a/css/commom.css
+++ b/css/commom.css
@@ -10,3 +10,12 @@
     margin: 0 auto;
     position: relative;
 }
+.k{
+    width: 1210px;
+    height: 100%;
+    margin: 0 auto;
+    position: relative;
+}
+/* *{
+    box-sizing: border-box;
+} */
