--- a/css/knowledge.css
+++ b/css/knowledge.css
@@ -400,3 +400,21 @@ opacity: 0.8;
         top: 150px;
         background-color: rgba(0,0, 0, 0.5);
     }
+/* 主体部分 */
+main {
+    width: 100%;
+    height: 2000px;
+    background-color: #f8f8f8;
+    margin-top: 30px;
+    }
+
+    .jingxuan {
+        width: 100%;
+    }
+
+    .jingxuan h2 {
+        width: 100%;
+        height: 45px;
+        font-size: 25px;
+        line-height: 45px;
+    }
