--- a/css/knowledge.css
+++ b/css/knowledge.css
@@ -408,13 +408,69 @@ main {
     margin-top: 30px;
     }
 
-    .jingxuan {
+    .jingxuan,.tuijian {
         width: 100%;
+        position: relative;
     }
 
-    .jingxuan h2 {
+    .jingxuan h2,.tuijian h2 {
         width: 100%;
         height: 45px;
         font-size: 25px;
         line-height: 45px;
+        font-weight: 400;
+    }
+    .jingxuan img,.tuijian img{
+        width: 100%;
+    }
+    .jingxuan span,.tuijian span{
+        display: none;
+        position: absolute;
+        width: 40px;
+        height: 65px;
+        background-color: #999999;
+        font-size: 30px;
+        text-align: center;
+        line-height: 65px;
+        color: #ffffff;
+    }
+    .jingxuan .left,.tuijian .left{
+        left: 0;
+        top: 50%;
+    }
+    .jingxuan .right,.tuijian .right{
+        right: 0;
+        top: 50%;
+    }
+    /* 店铺精选 */
+    .dianpu{
+        width: 100%;
+    }
+    .dianpu h2{
+        width: 100%;
+        height: 45px;
+        font-size: 25px;
+        line-height: 45px;
+        text-align: left;
+        font-weight: 400;
+    }
+    .dianpu h2 span{
+        float: right;
+        font-size: 20px;
+    }
+    .dianpu ul{
+        width: 100%;
+    }
+    .dianpu li{
+        float: left;
+        width: 32%;
+        margin-left: 23px;
+        box-sizing: border-box;
+        transition: all 200ms;
+    }
+    .dianpu li:first-child{
+        margin-left: 0;
+    }
+    .dianpu li img{
+        width: 100%;
     }
