--- a/css/knowledge.css
+++ b/css/knowledge.css
@@ -445,6 +445,7 @@ main {
     /* 店铺精选 */
     .dianpu{
         width: 100%;
+        margin-bottom: 20px;
     }
     .dianpu h2{
         width: 100%;
@@ -474,3 +475,18 @@ main {
     .dianpu li img{
         width: 100%;
     }
+   .daka{
+       width: 100%;
+       margin-top: 200px;
+   } 
+   .daka h2{
+       margin-top: 180px;
+       width: 100%;
+       height: 100px;
+       line-height: 100px;
+       font-size: 25px;
+       font-weight: 400;
+   }
+   .daka h2 span{
+       float: right;
+   }
